--- a/mks-sistemas/src/assets/scss/global.scss
+++ b/mks-sistemas/src/assets/scss/global.scss
@@ -13,7 +13,7 @@
     background-color: $azul;
   }
 
-  #root{
+  #body{
     min-height: 90vh;
     min-width: 100vw;
     background-color: $cinza-claro;
